Make Dockerfiles configurable via build arguments

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,8 +1,8 @@
 FROM ubuntu:22.04
 
-ARG VERSION=0.1.1
-ARG ARCHIVE_NAME=0.1.1.tar.gz
-ARG ARCHIVE_SHA256=30d9424df1eddb73912b0e2ad5375fa2c876c8e30906bec91952dfb75dcf220b
+ARG VERSION
+ARG ARCHIVE_NAME
+ARG ARCHIVE_SHA256
 
 ENV DEBIAN_FRONTEND=noninteractive
 
