--- a/Dockerfile.py-slim
+++ b/Dockerfile.py-slim
@@ -1,8 +1,8 @@
 FROM python:3.10-slim
 
-ARG VERSION=0.1.1
-ARG ARCHIVE_NAME=0.1.1.tar.gz
-ARG ARCHIVE_SHA256=30d9424df1eddb73912b0e2ad5375fa2c876c8e30906bec91952dfb75dcf220b
+ARG VERSION
+ARG ARCHIVE_NAME
+ARG ARCHIVE_SHA256
 
 WORKDIR /app
 
